example/http-route/hello-world/echo-prefix.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-world-prefix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-prefix
  template:
    metadata:
      labels:
        app: hello-world-prefix
    spec:
      containers:
        - name: hello-world-prefix
          image: "haproxytech/http-echo:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: hello-world-prefix
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  selector:
    app: hello-world-prefix
