example/http-route/hello-world/route-prefix.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-hello-world-prefix
spec:
  parentRefs:
  - name: hug-gateway
    sectionName: http
  hostnames:
  - "prefix.haproxy.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hello-world-prefix
      port: 8888
